module15/5.scheme-redirect/https-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - '*'
      port:
        name: https-bookinfo
        number: 443
        protocol: HTT PS
      tls:
        mode: SIMPLE
        credentialName: bookinfo-credential
    - hosts:
        - '*'
      port:
        name: http-bookinfo
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
